--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width initial scale=1.0">
-	<title>Learning HTML</title>
+	<title>Cafe Coffee</title>
 	<link rel="stylesheet" type="text/css" href="coffeeshop.css">
 </head>
 <body>
